tests/assignment/error_lvalue_class.say
class A {}
class B {}
A = B; // error: Invalid assignment: 'A' is immutable